--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="कम समय में लिंग बढ़ाएँ">
 <meta property="og:description" content="सिद्ध विधि">
-<meta property="og:image" content="https://images.wallpaperscraft.ru/image/single/gory_pejzazh_derevya_ozera_pejto_108199_3840x2400.jpg">
+<meta property="og:image" content="https://i.ibb.co/N6K2KYC/5-cm-dalam-12-hari-2022-07-26-T005836-237.png">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
